--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -5,8 +5,11 @@
     <title>Admin Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="container py-4">
 
+<body>
+<div th:replace="fragments/navbar :: navbar"></div>
+
+<div class="container py-4">
 <h1 class="text-center mb-5">Admin Dashboard</h1>
 
 <!-- toy category cards -->
@@ -41,10 +44,6 @@
 
 <!-- toy cards -->
 <section>
-<!--    <div class="d-flex justify-content-between align-items-center mb-3">-->
-<!--        <h2 class="text-success">Toys</h2>-->
-<!--        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#addToyModal">+ Add Toy</button>-->
-<!--    </div>-->
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2 class="text-success">Toys</h2>
     </div>
@@ -377,6 +376,7 @@
             </div>
         </div>
     </div>
+</div>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
