--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -11,6 +11,9 @@
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
+                    <a class="nav-link" th:href="@{/store/toys}">Toys</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/dashboard}">Dashboard</a>
                 </li>
             </ul>
