--- a/src/main/resources/templates/store/toys.html
+++ b/src/main/resources/templates/store/toys.html
@@ -146,8 +146,8 @@
                             <div class="card-body">
                                 <h5 class="card-title text-center" th:text="${toy.name}">Toy Name</h5>
                                 <ul class="list-unstyled">
+                                    <li><strong>Category:</strong> <span th:text="${toy.categoryString}">Category</span></li>
                                     <li><strong>Price:</strong> $<span th:text="${toy.price}">0.00</span></li>
-                                    <li><strong>Stock:</strong> <span th:text="${toy.stock}">0</span></li>
                                     <li class="mt-2">
                                         <p class="text-muted mb-0" th:text="${toy.description}">Description</p>
                                     </li>
