--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <link href="/css/styles.css" rel="stylesheet">
+</head>
+<body>
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark" th:fragment="navbar">
     <div class="container-fluid">
         <a class="navbar-brand" th:href="@{/toystore/}">
-            <img src="/images/logo.jpg" alt="Logo" width="30" height="30" class="d-inline-block align-text-top rounded-circle">
+            <img src="/images/logo.jpg" alt="Logo" width="30" height="30"
+                 class="d-inline-block align-text-top rounded-circle">
         </a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent">
@@ -16,7 +25,26 @@
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/dashboard}">Dashboard</a>
                 </li>
+                <li class="nav-item me-3">
+                    <a class="nav-link d-flex align-items-center gap-1 cart-link" th:href="@{/cart}">
+                        <svg height="20" width="20" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M12 3C9.79087 3 8.00001 4.79086 8.00001 7V8H3.60202C2.66326 8 1.95519 8.85254 2.1275 9.77534L3.99482 19.7753C4.1274 20.4853 4.7471 21 5.46934 21H18.5827C19.3076 21 19.9288 20.4816 20.0585 19.7683L21.8767 9.76833C22.0441 8.84757 21.3368 8 20.4009 8H16V7C16 4.79086 14.2091 3 12 3ZM14 10V12H16V10H19.8018L18.1654 19H5.88461L4.20402 10H8.00001V12H10V10H14ZM14 8V7C14 5.89543 13.1046 5 12 5C10.8954 5 10 5.89543 10 7V8H14Z"/>
+                        </svg>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link d-flex align-items-center gap-1 cart-link" th:href="@{/profile}">
+                        <svg color="#ffffff" width="20px" height="20px" xmlns="http://www.w3.org/2000/svg"
+                             viewBox="0 0 24 24" fill="currentColor">
+                            <path d="M9 7C9 5.34315 10.3431 4 12 4C13.6569 4 15 5.34315 15 7C15 8.65685 13.6569 10 12 10C10.3431 10 9 8.65685 9 7ZM12 2C9.23858 2 7 4.23858 7 7C7 9.76142 9.23858 12 12 12C14.7614 12 17 9.76142 17 7C17 4.23858 14.7614 2 12 2ZM5 20C5 17.7909 6.79086 16 9 16H15C17.2091 16 19 17.7909 19 20V21H21V20C21 16.6863 18.3137 14 15 14H9C5.68629 14 3 16.6863 3 20V21H5V20Z" data-darkreader-inline-fill="" style="--darkreader-inline-fill: currentColor;"/>
+                        </svg>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
 </nav>
+
+</body>
+</html>
