--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -4,12 +4,7 @@
     <meta charset="UTF-8">
     <title>Welcome to ToyStore</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .about-section {
-            background: #f8f9fa;
-            padding: 60px 0;
-        }
-    </style>
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
 <div th:replace="fragments/navbar :: navbar"></div>
