--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -26,11 +26,14 @@
                     <a class="nav-link" th:href="@{/admin/dashboard}">Dashboard</a>
                 </li>
                 <li class="nav-item me-3">
-                    <a class="nav-link d-flex align-items-center gap-1 cart-link" th:href="@{/cart}">
+                    <a class="nav-link d-flex align-items-center position-relative" th:href="@{/cart}">
                         <svg height="20" width="20" xmlns="http://www.w3.org/2000/svg"
                              viewBox="0 0 24 24" fill="currentColor">
                             <path d="M12 3C9.79087 3 8.00001 4.79086 8.00001 7V8H3.60202C2.66326 8 1.95519 8.85254 2.1275 9.77534L3.99482 19.7753C4.1274 20.4853 4.7471 21 5.46934 21H18.5827C19.3076 21 19.9288 20.4816 20.0585 19.7683L21.8767 9.76833C22.0441 8.84757 21.3368 8 20.4009 8H16V7C16 4.79086 14.2091 3 12 3ZM14 10V12H16V10H19.8018L18.1654 19H5.88461L4.20402 10H8.00001V12H10V10H14ZM14 8V7C14 5.89543 13.1046 5 12 5C10.8954 5 10 5.89543 10 7V8H14Z"/>
                         </svg>
+                        <span id="cart-count-badge"
+                              class="position-absolute top-0 start-100 mt-2 translate-middle badge rounded-pill bg-danger"
+                              style="font-size: 0.6rem; display: none;">0</span>
                     </a>
                 </li>
                 <li class="nav-item">
