added orders functionality without paypal

--- a/src/main/resources/templates/cart/view.html
+++ b/src/main/resources/templates/cart/view.html
@@ -54,7 +54,7 @@
             <form method="post" th:action="@{/cart/clear}">
                 <button class="btn btn-warning">Clear Cart</button>
             </form>
-            <a href="/checkout" class="btn btn-success">Checkout</a>
+            <a href="/orders/checkout" class="btn btn-success">Checkout</a>
         </div>
     </div>
 
