--- a/src/main/resources/templates/admin/login_audit.html
+++ b/src/main/resources/templates/admin/login_audit.html
@@ -3,6 +3,7 @@
 <head>
     <title>Login History</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <link href="/css/styles.css" rel="stylesheet">
 </head>
 <body>
 
