--- a/src/main/resources/templates/order/my_orders.html
+++ b/src/main/resources/templates/order/my_orders.html
@@ -39,7 +39,7 @@
             </table>
 
             <div class="text-end fw-bold">
-                Order Total: <span th:text="${order.cart.totalPrice} + ' $'"></span>
+                Order Total: <span th:text="${order.cart.totalPrice} + ' EUR'"></span>
             </div>
             <hr/>
         </div>
