--- a/src/main/resources/templates/order/checkout.html
+++ b/src/main/resources/templates/order/checkout.html
@@ -41,19 +41,19 @@
                 <tbody>
                 <tr th:each="item : ${cart.items}">
                     <td th:text="${item.toyName}"></td>
-                    <td th:text="${item.toyPrice} + ' €'"></td>
+                    <td th:text="${item.toyPrice} + ' EUR'"></td>
                     <td th:text="${item.quantity}"></td>
-                    <td th:text="${item.totalPrice} + ' €'"></td>
+                    <td th:text="${item.totalPrice} + ' EUR'"></td>
                 </tr>
                 </tbody>
             </table>
             <div class="text-end fs-5 fw-bold">
-                Total: <span th:text="${cart.totalPrice} + ' €'"></span>
+                Total: <span th:text="${cart.totalPrice} + ' EUR'"></span>
             </div>
         </div>
     </div>
 
-    <form th:action="@{/orders/checkout}" method="post">
+    <form id="checkoutForm" th:action="@{/orders/checkout}" method="post">
         <div class="row g-2 align-items-end">
             <div class="col-md-4">
                 <label for="paymentMethodId" class="form-label h5">Choose payment option:</label>
@@ -71,6 +71,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 <script src="/js/badge.js"></script>
+<script src="/js/paypal.js"></script>
 
 </body>
 </html>
